syntax = "proto3";
package blog;

option go_package = "blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

// Create
message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; // will have a blog id
}

// Read
message ReadBlogRequest {
    string blog_id = 1;
}
message ReadBlogResponse {
    Blog blog = 1;
}

// Update
message UpdateBlogRequest {
    Blog blog = 1;
}
message UpdateBlogResponse {
    Blog blog = 1;
}

// Delete
message DeleteBlogRequest {
    string blog_id = 1;
}
message DeleteBlogResponse {
    string blog_id = 1;
}

// List
message ListBlogRequest {

}
message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    // return NOT_FOUND if not found
    rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
    // return NOT_FOUND if not found
    rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);
    // return NOT_FOUND if not found
    rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse);
    // return NOT_FOUND if not found
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse);
}